--- a/README_style.css
+++ b/README_style.css
@@ -3,3 +3,36 @@
     padding: 0;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+
+.modern
+{
+    border-radius: 10px;
+    width: 300px;
+    padding: 2px 50px 10px 50px;
+}
+
+.modern_title
+{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: left;
+}
+
+.notice {
+    background-color: #004405;
+}
+
+.info {
+    background-color: #003e70;
+}
+
+.info2 {
+    background-color: #303030;
+}
+
+.warning {
+    background-color: #440000;
+}
+
+li {
+    display: flex;
+}
